--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                                         <li> <a href="meet.html"> Meet me</a> </li>
                                         <li> <a href="whatwedo.html"> What we do</a> </li>
                                         <li> <a href="contact.html">Contact us</a> </li>
+                                        <li> <a href="contact.html">Download </a> </li>
                                         <li> <a href="contact.html">Login </a> </li>
                                         <li class="mean-last"> <a href="#"><img src="images/search_icon.png" alt="#" /></a> </li>
                                         <li class="mean-last"> <a href="#"><img src="images/top-icon.png" alt="#" /></a> </li>
